# AgeOfManif

./: .gitignore  Bouton.cpp  Makefile  README.md  Subwindow.cpp  Subwindow.hpp  WindowManager.cpp  exempleSVG.cpp  exemple_classe_greveCmd  main.cpp  mon_programme  test  test.cpp  test_V1  test_V1.cpp  test_V2  test_V2.cpp  test_V3  test_V3.cpp  window.cpp  window.hpp
assets/: MyMap.json  MySkin.skin
src/: Boutton.cpp  Boutton.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  ex  main.cpp  maintestTheo.cpp
src/classes/: ActionManager.cpp  ActionManager.hpp  ActionType.hpp  Barbecue.hpp  Batiment.hpp  Bouton.cpp  Bouton.hpp  BoutonAction.cpp  BoutonAction.hpp  BuildBarbecueCommand.cpp  BuildBarbecueCommand.hpp  BuildMairieCommand.cpp  BuildMairieCommand.hpp  BuildPoliceStationCommand.cpp  BuildPoliceStationCommand.hpp  BuildUsineCommand.cpp  BuildUsineCommand.hpp  BuildZADCommand.cpp  BuildZADCommand.hpp  Command.hpp  CommandRegistery.hpp  CommandRegistry.hpp  Demonstration.hpp  DemonstrationCommand.cpp  DemonstrationCommand.hpp  DestroyCommand.cpp  DestroyCommand.hpp  DismentleCommand.cpp  DismentleCommand.hpp  FontManager.hpp  GiveInPeopleCommand.cpp  GiveInPeopleCommand.hpp  GoToWorkCommand.cpp  GoToWorkCommand.hpp  Grid.cpp  Grid.hpp  Hex.cpp  Hex.hpp  HexCoords.hpp  HoverManager.cpp  (+29 more)
